@@ -8,6 +8,7 @@ import util.DataUtil;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -55,9 +56,13 @@ public class Kata10 {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber"),
-                ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
+        return lists.stream().map(
+                        movie -> Map.of("nombre", movie.get("name"), "videos",
+                                videos.stream()
+                                        .filter(video -> video.get("listId").equals(movie.get("id")))
+                                        .map(element -> Map.of("Id", element.get("id"), "titulo", element.get("title")))
+                                        .collect(Collectors.toList())))
+                .collect(Collectors.toList());
+
     }
 }
