@@ -6,6 +6,7 @@ import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -63,8 +64,14 @@ public class Kata11 {
         List<Map> boxArts = DataUtil.getBoxArts();
         List<Map> bookmarkList = DataUtil.getBookmarkList();
 
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber", "time", 123, "boxart", "someUrl")
-        )));
+        return lists.stream()
+                .map(movie -> Map.of("name: ", movie.get("name"), "videos: ", videos.stream()
+                        .filter((video) -> video.get("listId").equals(movie.get("id")))
+                        .map((video) -> Map.of("id: ", video.get("id"), "title: ", video.get("title"),"time: ", bookmarkList.stream()
+                                .filter((book) -> book.get("videoId").equals(video.get("id")))
+                                .map((time) -> time.get("time")).collect(Collectors.toList()),"boxart", boxArts.stream()
+                                .filter(boxArt -> boxArt.get("videoId").equals(video.get("id"))).findFirst().get().toString()))
+                        .collect(Collectors.toList())))
+                .collect(Collectors.toList());
     }
 }
